# codemp-sublime

./: .gitignore  .gitmodules  Cargo.toml  Codemp.sublime-commands  README.md  README_sublime.md  build.rs  build.sh  client_commands.py  dependencies.json  input_handlers.py  listeners.py  main.py  plugin.py  pyproject.toml  test.py  workspace_commands.py
bindings/: Codemp_Sublime-0.6.1-cp38-cp38-macosx_11_0_arm64.whl.REMOVED.git-id  codemp-0.6.2-cp38-cp38-macosx_11_0_arm64.whl.REMOVED.git-id  codemp-0.7.0-cp38-cp38-macosx_11_0_arm64.whl.REMOVED.git-id  codemp.cpython-38-darwin.so.REMOVED.git-id  codemp_client.cpython-38-darwin.so.REMOVED.git-id
lib/codemp/: __init__.py  codemp.abi3.so.REMOVED.git-id
lib/codemp-0.0.5.dist-info/: METADATA  RECORD
plugin/: globals.py  input_handlers.py
plugin/commands/: client.py
plugin/core/: buffers.py  client.py  registry.py  session.py  workspace.py
src/: TaskManager.py  buffers.py  client.py  codemp_client.py  globals.py  lib.rs  logger.py  task_manager.py  utils.py  workspace.py  wrappers.py
